k8s/suma-ecommerce/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suma-ecommerce
  labels:
    name: suma-ecommerce
