k8s/suma-ecommerce/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suma-ecommerce-api-service
  namespace: suma-ecommerce
  labels:
    app: suma-ecommerce-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: suma-ecommerce-api
